--- a/uni-style.css
+++ b/uni-style.css
@@ -21,50 +21,40 @@ Use, distribution, or modification of this project is strictly prohibited withou
 ===============================================================================
 */
 
+
+
+
+
+
 /*---// STARTLINE & SAY HI //---*/
-
-    /*===============================================================================
-    # START PRIORITY CSS FILE
-    # 
-    ===============================================================================*/
-
-    /*===============================================================================
-    # START SECONDARY CSS FILE
-    # 
-    ===============================================================================*/
-
-
-    
-             
     :root {
         --background-color: #000000;
         --info-background: #000000;
         --info-text: #f4f4f4;
         --borders: #000000;
         --posts: #f4f4f4;
-        --pad-spacing: 1rem 2%;
+        --spacing: 1rem 2%;
         --accent: #f4f4f4;
-        --accent-font: 'Roboto', sans-serif;
+        --accent-font:'Roboto', sans-serif;
         --box-shadow: 0px 4px 8px #00000000;
         --font-size: 16px;
-        --foot-margin: -0.3rem;
+        --foot-margin: -1.5rem;
     }
-    
+
     .info {
         box-shadow: var(--box-shadow);
         background: var(--info-background);
         color: var(--info-text);
         border-radius: 0px; 
-        padding: var(--pad-spacing);
+        padding: var(--spacing);
         width: 100%;
-        
     }
 
     html, body {
         margin: 0;
         padding: 0;
         width: 100%;
-        overflow-x: hidden; /* Impedisce lo scorrimento laterale */
+        overflow-x: hidden;
         min-height: 100%;
         align-items: center;
     }
@@ -74,15 +64,11 @@ Use, distribution, or modification of this project is strictly prohibited withou
         font-family: 'Inconsolata', sans-serif;
         font-size: var(--font-size);
         margin: 0;
-        padding: var(--pad-spacing);
-        overflow-x: hidden; /* Impedisce lo scorrimento laterale */
-
-         /* FANCY-FX */
-        /* FANCY-FX */
+        padding: var(--spacing);
+        overflow-x: hidden;
         opacity: 0;
         visibility: hidden;
         transition: opacity 1.3s ease-in-out;
-        
     }
 
     body.visible {
@@ -95,70 +81,58 @@ Use, distribution, or modification of this project is strictly prohibited withou
         max-width: 100%;
         color: var(--info-text);
         margin: 0 auto;
-        padding: var(--pad-spacing);
-        padding-bottom: 5rem; /* Spazio riservato per il footer */
+        padding: var(--spacing);
+        padding-bottom: 5rem;
         overflow-x: hidden;
     }
 
-
-    /* Media query per schermi più larghi——————————————————————————————————— */
-    @media screen and (min-width: 1024px) {
-        body {
-            font-size: 18px; 
-        }
-    }
-
-    /* Media query per schermi molto larghi */
     @media screen and (min-width: 1440px) {
         body {
             font-size: 20px; 
         }
     }
 
-    /* Media query per schermi più stretti */
+    @media screen and (min-width: 1024px) {
+        body {
+            font-size: 18px; 
+        }
+        main {
+            padding: 3rem;  
+            margin: 0; 
+            padding-bottom: 10%;
+            padding-right: 20%;
+        }
+    }
+
     @media screen and (max-width: 768px) {
         body {
             font-size: 14px; 
         }
+        #footer-banner {
+            padding: var(--spacing);
+            font-size: 0.9rem;
+        }
     }
 
-    /* Media query per schermi ultra-stretti */
     @media screen and (max-width: 480px) {
         body {
             font-size: 12px;
         }
-    }
-    
-    @media screen and (min-width: 1024px) {
-        main {
-           
-            padding: 3rem;  
-            margin: 0; 
-            padding-bottom: 10%;
-            /* padding-left: 20%; */
-            padding-right: 20%;
-            }
-    }
-
-    @media screen and (max-width: 768px) {
         #footer-banner {
-            padding: var(--pad-spacing);
-            padding-right: 0%;
-            font-size: var(--testo-size);
-        }
-
-        main {
-            padding-bottom: 10%;
+            padding: var(--spacing);
+            font-size: 0.7rem;
         }
     }
 
     footer {
-        width: 100%;
-        padding:  var(--pad-spacing);  
+        width: 100vw;
+        padding: var(--spacing);  
         padding-bottom: 0rem;  
-        padding-top: 0rem; 
-        /* padding-left: 2%; */
-        /* padding-right: 1%; */
+        padding-top: 0rem;
+        left: 0;
+        right: 0;
+        top: 0;
+        width: 100%;
         align-items: center;
         text-align: left;
         font-family: var(--accent-font);
@@ -166,9 +140,8 @@ Use, distribution, or modification of this project is strictly prohibited withou
         color: var(--info-text);
         margin: 0;
         margin-top: var(--foot-margin); 
-        margin-bottom: var(--foot-margin);
-        /* Bha... */
-        overflow-x: hidden; 
+        margin-bottom: 0rem;
+        overflow-x: hidden;
     }
 
     * {
@@ -182,7 +155,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
     h1, h2, h3 {
         color: var(--accent);
         margin-bottom: 0.5rem;
-        font-family: var(--accent-font)
+        font-family: var(--accent-font);
     }
 
     ul {
@@ -205,12 +178,11 @@ Use, distribution, or modification of this project is strictly prohibited withou
 
     a:hover {
         color: #00ff00; 
-        text-decoration: none;
         text-decoration: underline;
     }
 
     .important-p a {
-        color:  #00bbff; 
+        color: #00bbff; 
         text-decoration: none;
         font-weight: bold; 
     }
@@ -221,7 +193,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
     }
 
     .imp-p a {
-        color:  #ffffff; 
+        color: #ffffff; 
         text-decoration: none;
         font-weight: normal; 
     }
@@ -232,7 +204,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
     }
 
     .imp-l a {
-        color:  #00bbff;
+        color: #00bbff;
         text-decoration: none;
         font-weight: normal;
     }
@@ -242,23 +214,20 @@ Use, distribution, or modification of this project is strictly prohibited withou
         text-decoration: underline; 
     }
 
-    
-    /* CSS ANIMATO——————————————————————————————————————————————— */
-
     #typing-container {
         width: 100%;
         margin: 0 auto;
-        padding: var(--pad-spacing); /* Usa la stessa spaziatura del CSS master */
+        padding: var(--spacing);
     }
 
     #typing-effect {
         font-family: 'Inconsolata', monospace;
-        font-size: var(--testo-size); /* Dimensione base */
-        color: var(--info-text); /* Colore dal CSS master */
-        white-space: pre-wrap; /* Mantiene gli spazi vuoti e le linee */
-        word-wrap: break-word; /* Permette il wrapping del testo */
-        line-height: 1.6; /* Altezza della linea */
-        display: inline; /* Assicura che il cursore resti accanto al testo */
+        font-size: var(--testo-size);
+        color: var(--info-text);
+        white-space: pre-wrap;
+        word-wrap: break-word;
+        line-height: 1.6;
+        display: inline;
     }
 
     #typing-effect::after {
@@ -266,10 +235,9 @@ Use, distribution, or modification of this project is strictly prohibited withou
         animation: blink 1s steps(1) infinite;
         font-size: 1.3rem;
         font-weight: normal;
-        display: inline; /* Evita che il cursore vada a capo */
+        display: inline;
     }
 
-    /* Nasconde il cursore */
     .no-cursor::after {
         content: "";
         animation: none;
@@ -281,77 +249,131 @@ Use, distribution, or modification of this project is strictly prohibited withou
         }
     }
 
-    /* Responsive Design */
     @media screen and (max-width: 768px) {
         #typing-effect {
-            font-size: 1.2rem; /* Riduce la dimensione del testo per schermi più piccoli */
-            line-height: 1.4; /* Regola l'altezza della linea */
+            font-size: 1.2rem;
+            line-height: 1.4;
         }
         #typing-container {
-            padding: 1rem; /* Riduce il padding per schermi piccoli */
+            padding: 1rem;
         }
     }
 
     @media screen and (max-width: 480px) {
         #typing-effect {
-            font-size: 1rem; /* Testo ancora più piccolo per dispositivi molto piccoli */
+            font-size: 1rem;
             line-height: 1.3;
         }
     }
- 
-    /*---// FOOTER BANNER //--- */
 
     #footer-banner {
-        position: absolute; /* Mantiene il footer in posizione */
+        position: absolute;
         bottom: 0;
-        left: 0; /* Assicura che il footer parta da sinistra */
-        right: 0; /* Assicura che il footer termini a destra */
-        width: 100%; /* Garantisce che il footer occupi l'intera larghezza */
+        left: 0;
+        right: 0;
+        width: calc(100% + 20px);
         background-color: var(--info-background);
         color: var(--info-text);
         text-align: center;
-
-
-        padding: var(--pad-spacing); /* Usa la stessa spaziatura del CSS master */
-        /* ==== ultima modifica prima del push 16:16 NMS factor
-                ================================ */
-
-        box-shadow: 0 -2px 10px rgba(36, 36, 36, 0.3);
+        padding: var(--spacing);
+        outline: 1px solid #000000;
+        box-shadow: 0 -2px 10px #24242420, -10px 0 300px 50px #000000, 10px 0 30px 50px #000000, 0 10px 60px 50px #000000;
         z-index: 1000;
         transition: transform 0.3s ease-in-out;
-        transform: translateY(100%); /* Footer nascosto inizialmente */
+        transform: translateY(100%);
     }
 
     #footer-banner.active {
-        transform: translateY(0); /* Mostra il footer */
+        transform: translateY(0);
     }
-
-
 
     #footer-banner #footer-content {
-
-        width: 100vw;
-
-        margin-top: var(--foot-margin); /* 0rem; /* Riduce lo spazio superiore */
-        margin-bottom: var(--foot-margin); /*0rem; /* Riduce lo spazio inferiore */
-
-        text-align: center; 
-        font-size: var(--testo-size); /* Usa la dimensione del testo del CSS master */
-        line-height: 1.6; /* Altezza linea coerente */
+        width: 100%;
+        padding: var(--spacing);
+        margin-top: var(--foot-margin);
+        margin-bottom: 0rem;
+        padding-bottom: -10%;
+        text-align: left;
+        font-size: var(--testo-size);
+        line-height: 1;
     }
 
-   
+    footer .link-live,
+    footer .link-static {
+        display: none;
+    }
 
+    .link-live {
+        display: inline-block;
+        color: #00ff00;
+        font-weight: bold;
+        animation: blink 1s infinite;
+    }
 
+    .link-static {
+        display: inline-block;
+        color: var(--link-accent);
+        font-weight: normal;
+    }
 
-    /*===============================================================================
-    # END SECONDARY CSS FILE
-    # 
-    ===============================================================================*/
+    body.static-page .link-live {
+        display: inline-block;
+    }
 
+    body.static-page .link-static {
+        display: none;
+    }
 
+    body.live-page .link-live {
+        display: none;
+    }
 
+    body.live-page .link-static {
+        display: inline-block;
+    }
 
+    @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
 
+    .roboto-100 {
+        font-family: var(--font-roboto);
+        font-weight: 100;
+    }
 
-/* --- ENDLINE & SAY BYE --- */
+    .roboto-400 {
+        font-family: var(--font-roboto);
+        font-weight: 400;
+    }
+
+    .roboto-700 {
+        font-family: var(--font-roboto);
+        font-weight: 700;
+    }
+
+    .roboto-900 {
+        font-family: var(--font-roboto);
+        font-weight: 900;
+    }
+
+    @import url('https://fonts.googleapis.com/css2?family=Inconsolata:wght@200..900&display=swap');
+
+    .inconsolata-200 {
+        font-family: var(--font-inconsolata);
+        font-weight: 200;
+    }
+
+    .inconsolata-400 {
+        font-family: var(--font-inconsolata);
+        font-weight: 400;
+    }
+
+    .inconsolata-700 {
+        font-family: var(--font-inconsolata);
+        font-weight: 700;
+    }
+
+    .inconsolata-900 {
+        font-family: var(--font-inconsolata);
+        font-weight: 900;
+    }
+
+/*-- ENDLINE & SAY BYE --*/
