--- a/uni-style.css
+++ b/uni-style.css
@@ -109,7 +109,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
             font-size: 14px; 
         }
         #footer-banner {
-            padding: var(--spacing);
+            padding: 0rem);
             font-size: 0.9rem;
         }
     }
@@ -119,14 +119,14 @@ Use, distribution, or modification of this project is strictly prohibited withou
             font-size: 12px;
         }
         #footer-banner {
-            padding: var(--spacing);
+            padding: 0rem;
             font-size: 0.7rem;
         }
     }
 
     footer {
         width: 100vw;
-        padding: var(--spacing);  
+        padding: 0rem ;  
         padding-bottom: 0rem;  
         padding-top: 0rem;
         left: 0;
@@ -275,8 +275,8 @@ Use, distribution, or modification of this project is strictly prohibited withou
         background-color: var(--info-background);
         color: var(--info-text);
         text-align: center;
-        padding: var(--spacing);
-        outline: 1px solid #000000;
+        padding: 0rem);
+        outline: 1px solid #00ff00;
         box-shadow: 0 -2px 10px #24242420, -10px 0 300px 50px #000000, 10px 0 30px 50px #000000, 0 10px 60px 50px #000000;
         z-index: 1000;
         transition: transform 0.3s ease-in-out;
@@ -289,7 +289,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
 
     #footer-banner #footer-content {
         width: 100%;
-        padding: var(--spacing);
+        padding: 0rem;
         margin-top: var(--foot-margin);
         margin-bottom: 0rem;
         padding-bottom: -10rem;
