--- a/uni-style.css
+++ b/uni-style.css
@@ -33,12 +33,12 @@ Use, distribution, or modification of this project is strictly prohibited withou
         --info-text: #f4f4f4;
         --borders: #000000;
         --posts: #f4f4f4;
-        --spacing: 1rem 2%;
+        --spacing: 3rem;
         --accent: #f4f4f4;
         --accent-font:'Roboto', sans-serif;
         --box-shadow: 0px 4px 8px #00000000;
         --font-size: 16px;
-        --foot-margin: -1.5rem;
+        --foot-margin: 1rem;
     }
 
     .info {
@@ -52,7 +52,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
 
     html, body {
         margin: 0;
-        padding: 0;
+        padding:  var(--spacing);
         width: 100%;
         overflow-x: hidden;
         min-height: 100%;
@@ -88,7 +88,8 @@ Use, distribution, or modification of this project is strictly prohibited withou
 
     @media screen and (min-width: 1440px) {
         body {
-            font-size: 20px; 
+            font-size: 20px;
+            padding-right: 20%; 
         }
     }
 
@@ -97,7 +98,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
             font-size: 18px; 
         }
         main {
-            padding: 3rem;  
+            padding: var(--spacing); 
             margin: 0; 
             padding-bottom: 10%;
             padding-right: 20%;
@@ -109,7 +110,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
             font-size: 14px; 
         }
         #footer-banner {
-            padding: 0rem);
+            padding: var(--spacing);
             font-size: 0.9rem;
         }
     }
@@ -119,29 +120,60 @@ Use, distribution, or modification of this project is strictly prohibited withou
             font-size: 12px;
         }
         #footer-banner {
-            padding: 0rem;
+            padding: var(--spacing);
             font-size: 0.7rem;
         }
     }
 
-    footer {
-        width: 100vw;
-        padding: 0rem ;  
-        padding-bottom: 0rem;  
-        padding-top: 0rem;
+    footer,
+    #footer-banner,
+    #footer-content {
+        padding:  var(--spacing); 
+        padding-bottom: var(--foot-margin);  
+        padding-top: var(--foot-margin);
         left: 0;
         right: 0;
         top: 0;
+        bottom: 0;
         width: 100%;
-        align-items: center;
+        align-items: left;
         text-align: left;
         font-family: var(--accent-font);
         background-color: var(--info-background);
         color: var(--info-text);
         margin: 0;
         margin-top: var(--foot-margin); 
-        margin-bottom: 0rem;
+        margin-bottom: var(--foot-margin);
         overflow-x: hidden;
+    }
+
+    #footer-banner {
+        position: bottom;
+       
+        
+       
+        background-color: var(--info-background);
+        color: var(--info-text);
+        
+        outline: 1px solid #ff00ee;
+        box-shadow: 0 -2px 10px #00ff48,
+                    -10px 0 300px 50px #000000,
+                    10px 0 30px 50px #000000,
+                    0 10px 60px 50px #000000;
+        z-index: 1000;
+        transition: transform 0.3s ease-in-out;
+        transform: translateY(100%);
+    }
+
+    #footer-banner #footer-content {
+        width: 100%;
+        padding: var(--spacing);
+        margin-top: var(--foot-margin);
+        margin-bottom: var(--foot-margin);
+        padding-bottom: var(--foot-margin);
+        text-align: left;
+        font-size: var(--testo-size);
+        line-height: 0.7;
     }
 
     * {
@@ -255,7 +287,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
             line-height: 1.4;
         }
         #typing-container {
-            padding: 1rem;
+            padding: var(--spacing);
         }
     }
 
@@ -265,37 +297,12 @@ Use, distribution, or modification of this project is strictly prohibited withou
             line-height: 1.3;
         }
     }
+   
 
-    #footer-banner {
-        position: bottom;
-        bottom: 0;
-        left: 0;
-        right: 0;
-        width: calc(100% + 20px);
-        background-color: var(--info-background);
-        color: var(--info-text);
-        text-align: center;
-        padding: 0rem);
-        outline: 1px solid #00ff00;
-        box-shadow: 0 -2px 10px #24242420, -10px 0 300px 50px #000000, 10px 0 30px 50px #000000, 0 10px 60px 50px #000000;
-        z-index: 1000;
-        transition: transform 0.3s ease-in-out;
-        transform: translateY(100%);
-    }
+
 
     #footer-banner.active {
         transform: translateY(0);
-    }
-
-    #footer-banner #footer-content {
-        width: 100%;
-        padding: 0rem;
-        margin-top: var(--foot-margin);
-        margin-bottom: 0rem;
-        padding-bottom: -10rem;
-        text-align: center;
-        font-size: var(--testo-size);
-        line-height: 1;
     }
 
     footer .link-live,
