--- a/uni-style.css
+++ b/uni-style.css
@@ -205,9 +205,15 @@ Use, distribution, or modification of this project is strictly prohibited withou
         margin-top: 2rem;
     }
 
-    h1, h2, h3 {
+    h1, h2 {
         color: var(--accent);
         margin-bottom: 0.5rem;
+        font-family: var(--accent-font);
+    }
+
+    h3 {
+        color: var(--accent);
+        margin-bottom: 0.3rem;
         font-family: var(--accent-font);
     }
 
