--- a/uni-style.css
+++ b/uni-style.css
@@ -203,12 +203,17 @@ Use, distribution, or modification of this project is strictly prohibited withou
         margin-top: 2rem;
     }
 
-    h1, h2, h3 {
+    h1, h2{
         color: var(--accent);
         margin-bottom: 0.5rem;
         font-family: var(--accent-font);
     }
 
+    h3 {
+        color: var(--accent);
+        margin-bottom: 0.3rem;
+        font-family: var(--accent-font);
+    }
 
     ul {
         margin-left: 1rem;
@@ -339,7 +344,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
     }
 
     #typing-effect::after {
-        content: "*⌝";
+        content: "█"; /* *⌝ */
         animation: blink 1s steps(1) infinite;
         font-size: 1.3rem;
         font-weight: normal;
