--- a/uni-style.css
+++ b/uni-style.css
@@ -353,9 +353,9 @@ Use, distribution, or modification of this project is strictly prohibited withou
     }
 
     #typing-effect::after {
-        content: "█"; /* *⌝ */
+        content: "*⌝"; /* *⌝ █ */
         animation: blink 1s steps(1) infinite;
-        font-size: 1rem;
+        font-size: 1.3rem;
         font-weight: normal;
         display: inline; /* Evita che il cursore vada a capo */
     }
